; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_mailbox.c_ack_mbox_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_mailbox.c_ack_mbox_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_mbox = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.omap_mbox*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_mbox*, i32)* @ack_mbox_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ack_mbox_irq(%struct.omap_mbox* %0, i32 %1) #0 {
  %3 = alloca %struct.omap_mbox*, align 8
  %4 = alloca i32, align 4
  store %struct.omap_mbox* %0, %struct.omap_mbox** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.omap_mbox*, %struct.omap_mbox** %3, align 8
  %6 = getelementptr inbounds %struct.omap_mbox, %struct.omap_mbox* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (%struct.omap_mbox*, i32)*, i32 (%struct.omap_mbox*, i32)** %8, align 8
  %10 = icmp ne i32 (%struct.omap_mbox*, i32)* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.omap_mbox*, %struct.omap_mbox** %3, align 8
  %13 = getelementptr inbounds %struct.omap_mbox, %struct.omap_mbox* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.omap_mbox*, i32)*, i32 (%struct.omap_mbox*, i32)** %15, align 8
  %17 = load %struct.omap_mbox*, %struct.omap_mbox** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 %16(%struct.omap_mbox* %17, i32 %18)
  br label %20

20:                                               ; preds = %11, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
